welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:5: error: value += is not a member of Int
			compteur +=
                                 ^